--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
   "name": "olexp",
-  "version": "0.3.2",
+  "version": "0.1.0",
   "description": "OpenLayers Explorer is a JavaScript application that combines the power of OpenLayers 3 interactive mapping and the layout management of w2ui.",
-  "author": {
-    "name": "Daniel Pulido",
-    "email": "dpmcmlxxvi@gmail.com"
-  },
+  "author": "Daniel Pulido <dpmcmlxxvi@gmail.com>",
   "main": "dist/olexp.js",
-  "scripts": {
-    "test": "grunt test"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/dpmcmlxxvi/olexp"
@@ -25,26 +19,23 @@
     "explorer"
   ],
   "devDependencies": {
-    "browserify-istanbul": "^3.0.0",
-    "chai": "^4.1.2",
-    "coveralls": "^3.0.0",
-    "grunt": "^1.0.2",
-    "grunt-browserify": "^5.3.0",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-concat": "^1.0.1",
+    "blanket": "^1.2.3",
+    "chai": "^3.5.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-csslint": "^2.0.0",
-    "grunt-contrib-cssmin": "^2.2.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-gh-pages": "^2.0.0",
-    "grunt-git": "^1.0.9",
-    "grunt-jsdoc": "^2.2.1",
-    "grunt-mocha-phantom-istanbul": "^0.2.1",
-    "grunt-release": "^0.14.0",
-    "ink-docstrap": "^1.3.2",
-    "jsdoc": "^3.5.5",
-    "mocha": "^5.1.1"
+    "grunt-contrib-csslint": "^0.2.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-gh-pages": "^1.0.0",
+    "grunt-git": "^0.3.7",
+    "grunt-jsdoc": "^1.1.0",
+    "grunt-release": "^0.13.0",
+    "ink-docstrap": "^1.1.2",
+    "jsdoc": "^3.4.0",
+    "mocha": "^2.3.3"
   },
   "preferGlobal": false,
   "private": false,
